--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "package for htmlbuilder v_1.0.0",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "devserver": "webpack-dev-server --open --progress"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,16 @@
   },
   "homepage": "https://github.com/busungg/HtmlBuilder#readme",
   "dependencies": {
-    "lodash": "^4.17.11",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "@babel/polyfill": "^7.4.4",
+    "lodash": "^4.17.11"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   }
 }
