--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "homepage": "https://github.com/busungg/HtmlBuilder#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "lodash": "^4.17.11"
+    "@babel/polyfill": "^7.4.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
