--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
