#43 [개선 사항] 프로그램 구조 리뉴얼 (Setting Manager
1. Component Util 기능 css 적용
- iframe내부에 style 적용할 수 있는 방법 적용
-> to-string-loader 사용하여 css를 runtime시 string 타입으로 받아 iframe style tag에 적용(style-loader 호출 시 css가 빈 object로 나오는 문제 발생)

2. Component Util 기능 사용 시 Event 적용
- Delete : 전체 Util -100, -100으로 이동, Property 창 hide

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/busungg/HtmlBuilder#readme",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "to-string-loader": "^1.1.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
