--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/busungg/HtmlBuilder#readme",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "codemirror": "^5.52.2",
     "normalize.css": "^8.0.1",
     "to-string-loader": "^1.1.6"
   },
