--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^6.0.0",
+    "prettier": "2.0.4",
     "style-loader": "^1.1.3",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
