--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "devserver": "webpack-dev-server --open --progress"
+    "devserver": "webpack-dev-server --open --progress",
+    "test": "mocha './renewal/**/*.test.js' --no-opts --config '.mocharc.js'"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^6.0.0",
+    "mocha": "*",
+    "chai": "*",
     "prettier": "2.0.4",
     "style-loader": "^1.1.3",
     "webpack": "^4.35.0",
