--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
     }
     */
   },
-  "mocha.files.glob": "renewal/**/*.test.js"
+  "mocha.files.glob": "renewal/**/*.test.js",
+  "mocha.requires": [
+    "@babel/register"
+  ]
 }
