--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "devserver": "webpack-dev-server --open --progress",
-    "test": "mocha './renewal/**/*.test.js' --no-opts --config '.mocharc.js'"
+    "test": "mocha -r @babel/register --config '.mocharc.js' './renewal/**/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,9 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.9.0",
     "babel-loader": "^8.0.6",
+    "chai": "*",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
@@ -41,7 +43,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^6.0.0",
     "mocha": "*",
-    "chai": "*",
     "prettier": "2.0.4",
     "style-loader": "^1.1.3",
     "webpack": "^4.35.0",
