--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "devserver": "webpack-dev-server --open --progress",
-    "test": "mocha -r @babel/register --config '.mocharc.js' './renewal/**/*.test.js'"
+    "test": "mocha --config '.mocharc.js' './renewal/**/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -24,29 +24,31 @@
   },
   "homepage": "https://github.com/busungg/HtmlBuilder#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
+    "@babel/polyfill": "^7.8.7",
     "codemirror": "^5.52.2",
     "normalize.css": "^8.0.1",
     "to-string-loader": "^1.1.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "chai": "*",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "file-loader": "^6.0.0",
+    "jsdom": "16.2.2",
+    "jsdom-global": "3.0.2",
     "mocha": "*",
     "prettier": "2.0.4",
     "style-loader": "^1.1.3",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2"
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
