--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "devserver": "webpack-dev-server --open --progress",
-    "test": "mocha --config '.mocharc.js' './renewal/**/*.test.js'"
+    "devserver": "webpack-dev-server --config renewal/webpack.config.js --open --progress",
+    "test:run": "webpack-dev-server --config renewal/webpack.development.config.js --open --progress",
+    "test:debug": "mocha --config '.mocharc.js' './renewal/**/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import-directory": "^1.1.0",
     "chai": "*",
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
@@ -45,6 +47,7 @@
     "jsdom": "16.2.2",
     "jsdom-global": "3.0.2",
     "mocha": "*",
+    "mocha-loader": "^5.0.0",
     "prettier": "2.0.4",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
