#47 [개선 사항] TDD 적용
1. jsdom event 호출 시 this 값을 element로 강제로 변경하여 event test 진행 불가 문제 해결
- Babel 설정.md에 작성함

2. istanbul js 설치 - 자세한 내용은 추후 확인

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": ["import-directory"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": {
+          "version": 2
+        }
+      }
+    ]
+  ],
+  "plugins": [
+    "import-directory"
+  ]
 }
