#47 [개선 사항] TDD 적용
1. Component test 파일 구현 및 Component 버그 수정 중

--- a/babel.config.json
+++ b/babel.config.json
@@ -3,9 +3,10 @@
     [
       "@babel/preset-env",
       {
-        "useBuiltIns": "usage",
+        "useBuiltIns": "entry",
         "corejs": {
-          "version": 2
+          "version": 3,
+          "proposal": false
         }
       }
     ]
