--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "file-loader": "^6.0.0",
     "jsdom": "16.2.2",
-    "jsdom-global": "3.0.2",
+    "jsdom-global": "^3.0.2",
     "mocha": "*",
     "mocha-loader": "^5.0.0",
     "nyc": "^15.0.1",
