#43 [개선 사항] 프로그램 구조 리뉴얼 (Setting Manager)
1. default css 적용 manager 구현
2. import, export 기능 구현 중

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
   "mocha.files.glob": "renewal/test/**/*.test.js",
   "mocha.requires": [
     "@babel/register"
-  ]
+  ],
+  "editor.renderWhitespace": "all"
 }
