--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "esm": "^3.2.25",
     "file-loader": "^6.0.0",
     "jsdom": "16.2.2",
     "jsdom-global": "^3.0.2",
